--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -109,7 +109,7 @@
 
                         </ul>
                         <div class="thumbnail-section" style="visibility: visible;">
-                            <div class="view">
+                            <div class="view" style="width: 80%; height: 80%; margin:0 auto;">
                                 <img id="expandedImg" src="" style="cursor:pointer; width:624 height=351" alt="루게릭병 환우 간병비 지원사업">
                             </div>
                             <div class="thumbnail-list">
