--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -299,7 +299,7 @@
     let memberRankList = [[${memberRankList}]]; // 멤버 랭크 리스트
     let freeBoardList = [[${freeBoardList}]]; // 자유게시판 리스트
 </script>
-<script src="/js/main/main.js"></script>
+<script src="/js/main/main-page.js"></script>
 <script>
     // 시계 출력 대상 요소
     var Target = document.getElementById("clock");
